// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1 expense correctly 1`] = `
<div>
  <p>
    Viewing 1 expense totalling $1,095.00
  </p>
</div>
`;

exports[`should render several expenses correctly 1`] = `
<div>
  <p>
    Viewing 2 expenses totalling $1,140.00
  </p>
</div>
`;
